--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <select name="sex" id="sex">
   <option value="female">female</option>
   <option value="male">male</option>
-  <option value="other">othe</option>
+  <option value="....">othe</option>
 </select>
 <br>
 <hr>
