--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <select name="sex" id="sex">
   <option value="female">female</option>
   <option value="male">male</option>
-  <option value="....">othe</option>
+git  <option value="....">othe</option>
 </select>
 <br>
 <hr>
@@ -34,11 +34,22 @@
 <h2>Educational Information</h2>
 <br>
 
-<label for="sex">Choose your grade:</label>
-<ul style="list-style-type:circle;">
-  <li>Highschool</li>
-  <li>University </li>
+<label for="grade">Choose your grade:</label>
 
-</ul>
+<form action="input">
+	<br>
+	<input type="radio" name="name" value="Highschool">Highschool
+	<input type="radio" name="name" value="Bachelor">Bachelor
+	<input type="radio" name="name" value="Master">Master
+	<input type="radio" name="name" value="PHD">PHD
+
+</form>
+<br>
+<label for="number">Enter your last score please:</label>
+<input type="number">
+
+
+
+
 </body>
 </html>
