text area-submit-css changes

--- a/index.html
+++ b/index.html
@@ -45,8 +45,18 @@ git  <option value="....">othe</option>
 
 </form>
 <br>
+<label for="text">Enter your field of study please:</label>
+<input type="text">
 <label for="number">Enter your last score please:</label>
 <input type="number">
+<br>
+<br>
+<label for="text">Write the reason why you choose this fieid please:</label>
+<br>
+<textarea name="field " id="" cols="70" rows="10"></textarea>
+<input type="submit" name="submit">
+
+
 
 
 
