more informaion-css changes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 <h1>Informtion Form</h1>
-<br>
-<br>
+<p>Fill the blanks and emter your information</p>
 <h2>Personal Information</h2>
 <br>
 <form>
@@ -55,9 +54,29 @@ git  <option value="....">othe</option>
 <br>
 <textarea name="field " id="" cols="70" rows="7"></textarea>
 <input type="submit" name="submit">
+</form>
+<br>
+<hr>
+<br>
 
+<h2>More Information</h2>
+<br>
+<label for="english skills">Your English skills:</label>
+<form action="input">
+	<br>
+	<input type="radio" name="name" value="Pre-intermadiate">Pre-intermadiate
+	<input type="radio" name="name" value="Intermadiate">Intermadiate
+	<input type="radio" name="name" value="Advanced">Advanced
 
+</form>
+<label for="Team-work skills">Your Team-work skills:</label>
+<form action="input">
+	<br>
+	<input type="radio" name="name" value="Pre-intermadiate">Pre-intermadiate
+	<input type="radio" name="name" value="Intermadiate">Intermadiate
+	<input type="radio" name="name" value="Advanced">Advanced
 
+</form>
 
 
 
