submit-more information-css changes

--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
   <option value="male">male</option>
 git  <option value="....">othe</option>
 </select>
-<br>
-<hr>
-<br>
+
 
 </form>
+<br>
+<br>
+<input type="submit" name="submit">
+<br>
+<hr>
+
 <h2>Educational Information</h2>
 <br>
 
@@ -56,6 +60,8 @@ git  <option value="....">othe</option>
 <input type="submit" name="submit">
 </form>
 <br>
+<input type="submit" name="submit">
+<br>
 <hr>
 <br>
 
@@ -69,6 +75,7 @@ git  <option value="....">othe</option>
 	<input type="radio" name="name" value="Advanced">Advanced
 
 </form>
+<br>
 <label for="Team-work skills">Your Team-work skills:</label>
 <form action="input">
 	<br>
@@ -77,6 +84,19 @@ git  <option value="....">othe</option>
 	<input type="radio" name="name" value="Advanced">Advanced
 
 </form>
+<br>
+
+<br>
+<label for="Your interst">You are intrested in:</label>
+<form action="input">
+	<br>
+	<input type="checkbox" name="name" value="Education">Education
+	<input type="checkbox" name="name" value="Science">Science
+	<input type="checkbox" name="name" value="Sport">Sport
+	<input type="checkbox" name="name" value="Art">Art
+	<input type="checkbox" name="name" value="Social-Networks">Social-Networks
+</form>
+
 
 
 
