personal/contact information- css changes

--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
 </head>
 <body>
 <h1>Informtion Form</h1>
-<p>Fill the blanks and emter your information</p>
+<p>Fill the blanks and enter your information</p>
 <h2>Personal Information</h2>
 <br>
 <form>
-	<input type="text" name="name"  placeholder="first name">
-	<input type="text" name="name"  placeholder="last name">
+	Firs Name:  <input type="text" name="name"  placeholder="niloo">
 	<br>
+	Last Name:  <input type="text" name="name"  placeholder="saberi">
 	<br>
-	<input type="number" name="age" value="age" placeholder="age">
-	
-
-
-<select name="sex" id="sex">
+	Your Age:  <input type="number" name="age" value="age" placeholder="33">
+	<br>
+Your Gender:  <select name="sex" id="sex">
   <option value="female">female</option>
   <option value="male">male</option>
 git  <option value="....">othe</option>
@@ -96,6 +94,21 @@ git  <option value="....">othe</option>
 <br>
 <input type="submit" name="submit">
 <br><hr>
+<br>
+<h2>Contact Information</h2>
+<br>
+<label for="Your content Information">Enter your Contact information please:</label>
+<br>
+<br>
+Phone Number:  <input type="text" name="name"  placeholder="09121111111">
+<br>
+Email Address:   <input type="text" name="name"  placeholder="info@gmail.com">
+<br>
+<input type="submit" name="submit">
+<br>
+<hr>
+<br>
+
 
 
 
