--- a/index.html
+++ b/index.html
@@ -1,117 +1,122 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Informtion Form</title>
 </head>
+
 <body>
-<h1>Informtion Form</h1>
-<p>Fill the blanks and enter your information</p>
-<h2>Personal Information</h2>
-<br>
-<form>
-	Firs Name:  <input type="text" name="name"  placeholder="niloo">
+	<h1>Informtion Form</h1>
+	<div class="paragraph">
+	<p>Fill the blanks and enter your information</p></div>
+	<h2>Personal Information</h2>
 	<br>
-	Last Name:  <input type="text" name="name"  placeholder="saberi">
+	<form>
+		Firs Name: <input type="text" name="name" placeholder="niloo">
+		<br>
+		Last Name: <input type="text" name="name" placeholder="saberi">
+		<br>
+		Your Age: <input type="number" name="age" value="age" placeholder="33">
+		<br>
+		Your Gender: <select name="sex" id="sex">
+			<option value="female">female</option>
+			<option value="male">male</option>
+			git <option value="....">othe</option>
+		</select>
+
+
+	</form>
 	<br>
-	Your Age:  <input type="number" name="age" value="age" placeholder="33">
+	<input type="submit" name="submit">
 	<br>
-Your Gender:  <select name="sex" id="sex">
-  <option value="female">female</option>
-  <option value="male">male</option>
-git  <option value="....">othe</option>
-</select>
-
-
-</form>
-<br>
-<input type="submit" name="submit">
-<br>
-<hr>
-<h2>Educational Information</h2>
-<br>
-
-<label for="grade">Choose your grade:</label>
-
-<form action="input">
+	<hr>
+	<h2>Educational Information</h2>
 	<br>
-	<input type="radio" name="name" value="Highschool">Highschool
-	<input type="radio" name="name" value="Bachelor">Bachelor
-	<input type="radio" name="name" value="Master">Master
-	<input type="radio" name="name" value="PHD">PHD
 
-</form>
-<br>
-<label for="text">Enter your field of study please:</label>
-<input type="text">
-<label for="number">Enter your last score please:</label>
-<input type="number">
-<br>
-<br>
-<label for="text">Write the reason why you choose this fieid please:</label>
-<br>
-<textarea name="field " id="" cols="70" rows="7"></textarea>
-</form>
-<br>
-<input type="submit" name="submit">
-<br>
-<hr>
-<br>
+	<label for="grade">Choose your grade:</label>
 
-<h2>More Information</h2>
-<br>
-<label for="english skills">Your English skills:</label>
-<form action="input">
+	<form action="input">
+		<br>
+		<input type="radio" name="name" value="Highschool">Highschool
+		<input type="radio" name="name" value="Bachelor">Bachelor
+		<input type="radio" name="name" value="Master">Master
+		<input type="radio" name="name" value="PHD">PHD
+
+	</form>
 	<br>
-	<input type="radio" name="name" value="Pre-intermadiate">Pre-intermadiate
-	<input type="radio" name="name" value="Intermadiate">Intermadiate
-	<input type="radio" name="name" value="Advanced">Advanced
-
-</form>
-<br>
-<label for="Team-work skills">Your Team-work skills:</label>
-<form action="input">
+	<label for="text">Enter your field of study please:</label>
+	<input type="text">
+	<label for="number">Enter your last score please:</label>
+	<input type="number">
 	<br>
-	<input type="radio" name="name" value="Pre-intermadiate">Pre-intermadiate
-	<input type="radio" name="name" value="Intermadiate">Intermadiate
-	<input type="radio" name="name" value="Advanced">Advanced
-
-</form>
-<br>
-
-<br>
-<label for="Your interst">You are intrested in:</label>
-<form action="input">
 	<br>
-	<input type="checkbox" name="name" value="Education">Education
-	<input type="checkbox" name="name" value="Science">Science
-	<input type="checkbox" name="name" value="Sport">Sport
-	<input type="checkbox" name="name" value="Art">Art
-	<input type="checkbox" name="name" value="Social-Networks">Social-Networks
-</form>
-<br>
-<input type="submit" name="submit">
-<br><hr>
-<br>
-<h2>Contact Information</h2>
-<br>
-<label for="Your content Information">Enter your Contact information please:</label>
-<br>
-<br>
-Phone Number:  <input type="text" name="name"  placeholder="09121111111">
-<br>
-Email Address:   <input type="text" name="name"  placeholder="info@gmail.com">
-<br>
-<input type="submit" name="submit">
-<br>
-<hr>
-<br>
+	<label for="text">Write the reason why you choose this fieid please:</label>
+	<br>
+	<textarea name="field " id="" cols="70" rows="7"></textarea>
+	</form>
+	<br>
+	<input type="submit" name="submit">
+	<br>
+	<hr>
+	<br>
+
+	<h2>More Information</h2>
+	<br>
+	<label for="english skills">Your English skills:</label>
+	<form action="input">
+		<br>
+		<input type="radio" name="name" value="Pre-intermadiate">Pre-intermadiate
+		<input type="radio" name="name" value="Intermadiate">Intermadiate
+		<input type="radio" name="name" value="Advanced">Advanced
+
+	</form>
+	<br>
+	<label for="Team-work skills">Your Team-work skills:</label>
+	<form action="input">
+		<br>
+		<input type="radio" name="name" value="Pre-intermadiate">Pre-intermadiate
+		<input type="radio" name="name" value="Intermadiate">Intermadiate
+		<input type="radio" name="name" value="Advanced">Advanced
+
+	</form>
+	<br>
+
+	<br>
+	<label for="Your interst">You are intrested in:</label>
+	<form action="input">
+		<br>
+		<input type="checkbox" name="name" value="Education">Education
+		<input type="checkbox" name="name" value="Science">Science
+		<input type="checkbox" name="name" value="Sport">Sport
+		<input type="checkbox" name="name" value="Art">Art
+		<input type="checkbox" name="name" value="Social-Networks">Social-Networks
+	</form>
+	<br>
+	<input type="submit" name="submit">
+	<br>
+	<hr>
+	<br>
+	<h2>Contact Information</h2>
+	<br>
+	<label for="Your content Information">Enter your Contact information please:</label>
+	<br>
+	<br>
+	Phone Number: <input type="text" name="name" placeholder="09121111111">
+	<br>
+	Email Address: <input type="text" name="name" placeholder="info@gmail.com">
+	<br>
+	<input type="submit" name="submit">
+	<br>
+	<hr>
+	<br>
 
 
 
 
 
 </body>
+
 </html>
