--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 
 		</form>
-		<div class="information-child">
+		
 			<input type="submit" name="submit">
-		</div>
+	
 		<br>
 		<hr>
 		<div class="h2">
@@ -56,16 +56,15 @@
 			<form action="input">
 				<br>
 				<div class="edication-child">
-					<input type="radio" name="name" value="Highschool">Highschool
+					<input type="radio" name="name" value="Highschool"><span>Highschool</span>
+				<div class="edication-child">
+					<input type="radio" name="name" value="Bachelor"><span>Bachelor</span> 
 				</div>
 				<div class="edication-child">
-					<input type="radio" name="name" value="Bachelor">Bachelor
+					<input type="radio" name="name" value="Master"><span>Master</span> 
 				</div>
 				<div class="edication-child">
-					<input type="radio" name="name" value="Master">Master
-				</div>
-				<div class="edication-child">
-					<input type="radio" name="name" value="PHD">PHD
+					<input type="radio" name="name" value="PHD"><span>PHD</span>
 				</div>
 			</form>
 		</div>
@@ -76,6 +75,7 @@
 				<input type="text">
 			</div>
 			<div class="field-child">
+				
 				<label for="number">Enter your last score please:</label>
 				<input type="number">
 			</div>
@@ -83,6 +83,7 @@
 			<div class="field-child">
 				<br>
 				<label for="text">Write the reason why you choose this fieid please:</label>
+			
 			</div>
 			<div class="field-child">
 				<textarea name="field " id="" cols="70" rows="7"></textarea>
@@ -90,10 +91,8 @@
 
 			</form>
 		</div>
-		<div class="information-child">
-			<input type="submit" name="submit">
-		</div>
-
+		<button>submit
+		</button>
 
 		</div>
 
@@ -149,11 +148,8 @@
 		</div>
 		</div>
 		<br>
-		<div class="more-child"><input type="submit" name="submit"></div>
-		<br>
-		<hr>
-		<br>
-		</div>
+		<button>submit
+		</button>
 		</div>
 		<div class="h2">
 			<h2>Contact Information</h2>
@@ -170,12 +166,13 @@
 			<br>
 			<div class="contact-child">Email Address: <input type="text" name="name" placeholder="info@gmail.com"></div>
 			<br>
-			<div class="information-child">
-				<input type="submit" name="submit">
-			</div>
+
 
 			<hr>
 			<br>
+		</div>
+		<div class="button"><button>submit
+		</button>
 		</div>
 	</main>
 
