edit personal information- opacity

--- a/index.html
+++ b/index.html
@@ -21,21 +21,40 @@
 		<div class="information">
 			<form>
 				<div class="information-child">
-					Firs Name: <input type="text" name="name" placeholder="niloo">
+					<span>Firs Name:</span> <input type="text" name="name" placeholder="niloo">
 				</div>
 				<div class="information-child">
-					Last Name: <input type="text" name="name" placeholder="saberi">
+					<span>Last Name:</span> <input type="text" name="name" placeholder="saberi">
 				</div>
 				<div class="information-child">
-					Your Age: <input type="number" name="age" value="age" placeholder="33">
+					<span>Your Age:</span> <input type="number" name="age" value="age" placeholder="33">
 				</div>
 				<div class="information-child">
-					Your Gender: <select name="sex" id="sex">
+					<span>Your Gender:</span> <select name="sex" id="sex">
 						<option value="female">female</option>
 						<option value="male">male</option>
-						git <option value="....">othe</option>
+						git <option value="....">other</option>
+					</select>
+					<span>Your Statuse:</span> <select name="status" id="status">
+						<option value="single">single</option>
+						<option value="maride">maride</option>
+						
 					</select>
 				</div>
+				<div class="information-child">
+					<label for="children">Do you have a child?:</label>
+					<select name="sex" id="sex">
+						<option value="no">No</option>
+						<option value="yes">Yes</option>
+					
+					</select>
+				</div>
+			<div class="information-child2"><label for="children">Enter the number of your children:</label>
+			<input type="number" name="children" value="children" placeholder="0">
+			</div>
+		</div>
+
+		
 		</div>
 
 
