chang button position

--- a/index.html
+++ b/index.html
@@ -52,16 +52,14 @@
 			<div class="information-child2"><label for="children">Enter the number of your children:</label>
 			<input type="number" name="children" value="children" placeholder="0">
 			</div>
+			
+				<button>submite</button>
+			
 		</div>
 
-		
-		</div>
-
-
-		</form>
-		
-			<input type="submit" name="submit">
+	</form>
 	
+		</div>
 		<br>
 		<hr>
 		<div class="h2">
@@ -109,9 +107,10 @@
 			</div><br>
 
 			</form>
+			<div class="field-child2"><button>submit
+			</button></div>
 		</div>
-		<button>submit
-		</button>
+	
 
 		</div>
 
@@ -163,12 +162,13 @@
 				<input type="checkbox" name="name" value="Art">Art
 				<input type="checkbox" name="name" value="Social-Networks">Social-Networks
 			</form>
+			<div class="more-skills2"><button>submit
+			</button></div>
 		</div>
 		</div>
 		</div>
 		<br>
-		<button>submit
-		</button>
+		
 		</div>
 		<div class="h2">
 			<h2>Contact Information</h2>
@@ -185,14 +185,14 @@
 			<br>
 			<div class="contact-child">Email Address: <input type="text" name="name" placeholder="info@gmail.com"></div>
 			<br>
-
+			<div class="contact-child2"><button>submit
+			</button>
+			</div>
 
 			<hr>
 			<br>
 		</div>
-		<div class="button"><button>submit
-		</button>
-		</div>
+		
 	</main>
 
 </body>
