--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="h2">
 			<h2>Personal Information</h2>
 		</div>
-		<br>
+
 		<div class="information">
 			<form>
 				<div class="information-child">
@@ -33,7 +33,7 @@
 					<span>Your Gender:</span> <select name="sex" id="sex">
 						<option value="female">female</option>
 						<option value="male">male</option>
-						git <option value="....">other</option>
+						 <option value="....">other</option>
 					</select>
 					<span>Your Statuse:</span> <select name="status" id="status">
 						<option value="single">single</option>
@@ -60,8 +60,7 @@
 		</form>
 
 		</div>
-		<br>
-		<hr>
+
 		<div class="h2">
 			<h2>Educational Information</h2>
 		</div>
@@ -178,19 +177,18 @@
 
 		<label for="Your content Information">Enter your Contact information please:</label>
 		<div class="contact">
-			<br>
-			<br>
-
+		
+			
 			<div class="contact-child">Phone Number: <input type="text" name="name" placeholder="09121111111"></div>
-			<br>
+			
 			<div class="contact-child">Email Address: <input type="text" name="name" placeholder="info@gmail.com"></div>
-			<br>
+
 			<div class="contact-child2"><button>submit
 				</button>
 			</div>
 
-			<hr>
-			<br>
+
+		
 		</div>
 
 	</main>
